<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="100"
        android:title="@string/action_noti"
        app:showAsAction="always" />
    <!--<item-->
    <!--android:id="@+id/about"-->
    <!--android:icon="@android:drawable/ic_menu_info_details"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/action_about"-->
    <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_dept"
        android:icon="@drawable/filtericon"
        android:orderInCategory="100"
        android:title="@string/action_dept"
        app:showAsAction="always" />


    <item
        android:id="@+id/nurse_dept"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="100"
        android:title="@string/nurse_dept"
        app:showAsAction="always" />

    <item
        android:id="@+id/admin_nurse_dept"
        android:icon="@android:drawable/ic_menu_today"
        android:orderInCategory="100"
        android:title="@string/nurse_dept"
        app:showAsAction="always" />
</menu>
