<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="?android:attr/actionBarSize"
    android:layoutDirection="ltr"
    tools:context=".fragment.VersionInfoFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/app_info_shape"
            android:gravity="center">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:gravity="center">



                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="40dp"
                    android:text="Pulse Hamad App"
                    android:textColor="@color/hamad_primary"
                    android:textSize="20dp"
                    app:layout_constraintStart_toEndOf="@id/imageView"
                    app:layout_constraintTop_toTopOf="@id/imageView" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="الإصدار V "
                    android:textSize="20dp"
                    app:layout_constraintBottom_toBottomOf="@id/imageView"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        style="@style/card_view_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp"
        app:cardBackgroundColor="#E394AF">

        <LinearLayout
            android:id="@+id/store_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.8"

                android:gravity="center"
                android:padding="10dp"
                android:text="@string/store_link"
                android:textColor="@color/blue" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/copy_store"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_content_copy_black_24dp" />
            </LinearLayout>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:id="@+id/site_linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding"
        android:layoutDirection="ltr"
        android:orientation="horizontal">


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp" />

            <TextView
                android:id="@+id/check_updates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="10dp" />

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/update"

                />
        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/by"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/reserved"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="10dp"
        android:text="@string/app_info"
        android:textColor="@color/hamad_primary" />


    <!--        <TextView-->
    <!--            android:id="@+id/reserved"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_alignParentBottom="true"-->
    <!--            android:layout_marginTop="@dimen/padding"-->
    <!--            android:gravity="center_horizontal"-->
    <!--            android:text="جميع الحقوق محفوظة © أبريل 2020" />-->


</LinearLayout>